--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -283,7 +283,7 @@ select:focus, input[type="search"]:focus{
 <header class="appHeader">
   <div class="wrap headRow">
     <div class="brand">
-      <div class="brandTitle"SERVE STATION</div>
+      <div class="brandTitle">SERVE STATION</div>
       <div class="brandSub">pending を編集 → 保存 / 完了 / キャンセル</div>
     </div>
 
@@ -404,6 +404,7 @@ select:focus, input[type="search"]:focus{
 <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
 
 
