--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -275,6 +275,74 @@ select:focus, input[type="search"]:focus{
   .topNav{ width:100%; }
 }
 
+    /* ===== typography upgrade ===== */
+
+/* 全体のベースフォントを少し締める */
+body{
+  font-family: system-ui, -apple-system, "Segoe UI", "Noto Sans JP", "Hiragino Kaku Gothic ProN", sans-serif !important;
+  letter-spacing: .2px;
+}
+
+/* ロゴ（SERVE STATION）を「ロゴ感」出す */
+.brandTitle{
+  font-size: 26px !important;      /* ★大きく */
+  font-weight: 1100 !important;
+  letter-spacing: 1.4px !important;
+  line-height: 1.0;
+  text-transform: uppercase;
+}
+
+/* カード見出し（No.xx）と金額を締める */
+.card .name{
+  font-weight: 1000 !important;
+  letter-spacing: .4px;
+}
+.card .price{
+  font-weight: 1100 !important;
+  letter-spacing: .4px;
+}
+
+/* 内訳を「黒丸リスト」から “モダンな行” へ */
+.card .list{
+  list-style: none !important;
+  padding-left: 0 !important;
+  margin: 10px 0 0 !important;
+}
+.card .list li{
+  display:flex;
+  align-items:baseline;
+  justify-content:space-between;
+  gap:10px;
+
+  padding: 10px 10px;
+  border: 1px solid rgba(255,255,255,.12);
+  background: rgba(255,255,255,.04);
+  border-radius: 14px;
+
+  font-weight: 900;                /* ★ここが「かっこよさ」 */
+  letter-spacing: .2px;
+}
+.card .list li::before{
+  content:"";
+  width:8px; height:8px;
+  border-radius:99px;
+  background: linear-gradient(90deg, var(--neon1), var(--neon2));
+  box-shadow: 0 0 12px rgba(34,211,238,.22);
+  margin-right:8px;
+  flex: 0 0 auto;
+}
+.card .list li{
+  position: relative;
+}
+.card .list li > *{ flex:0 0 auto; }
+
+/* 内訳の “商品名側” を強く、右側（数量/小計）を整列 */
+.card .list li .itemName,
+.card .list li b,
+.card .list li span{
+  font-weight: 900;
+}
+
   </style>
 
   <link rel="stylesheet" href="./ui_dark.css?v=2">
@@ -284,7 +352,6 @@ select:focus, input[type="search"]:focus{
   <div class="wrap headRow">
     <div class="brand">
       <div class="brandTitle">SERVE STATION</div>
-      <div class="brandSub">pending を編集 → 保存 / 完了 / キャンセル</div>
     </div>
 
     <nav class="topNav">
@@ -404,6 +471,7 @@ select:focus, input[type="search"]:focus{
 <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
 
 
