--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -683,6 +683,8 @@ body{
 
 <script src="./handoff.js"></script>
 <script src="./ui.js?v=1"></script>
+<link rel="stylesheet" href="./ui_theme.css?v=1">
 </body>
 </html>
+
 
