--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -6,7 +6,6 @@
   <title>SERVE STATION</title>
 
   <!-- ✅ 読み込み順を固定（誤作動防止） -->
-  <link rel="stylesheet" href="./ui_dark.css?v=2">
   <link rel="stylesheet" href="./ui_theme.css?v=1">
 
   <style>
@@ -257,5 +256,8 @@
 
 <script src="./handoff.js"></script>
 <script src="./ui.js?v=1"></script>
+<link rel="stylesheet" href="./ui_theme.css?v=1">
 </body>
 </html>
+
+
